@@ -6,6 +6,7 @@ Date: ???
     - Marked Alien Biomes mod as incompatible #263
     - Marked Angel's Exploration mod as incompatible #264
     - Reduced the cost of Circuit wires #286
+    - Added Thermal Water Bore to ingredients for Thermal Water Extractor #290
   Bugfixes:
     - Fixed tech unlocks after adding Science Cost Tweaker mod mid game #260
     - Fixed duplicate starting items in rock-chest as well as player inventory #268
